# tsanalyzer

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.base  GEMINI.md  Makefile  Makefile.docker  README.md  SECURITY.md  appliance_watchdog.sh  big_screen_noc.html  build.sh  build_deps.sh  docker-compose.yml  index.html  mock_noc_dashboard.html  requirements-test.txt  stability_report.txt  test_io.lua  test_script.lua  tsa.conf  tsa.conf.example  tsa.conf.test
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
docs/: 00_product_overview.md  01_causal_analysis_spec.md  01_engine_execution_model.md  02_monitoring_prd.md  02_timing_model.md  03_verification_strategy.md  04_metrology_model.md  04_resource_performance.md  05_api_reference.md  05_determinism_contract.md  06_performance_contract.md  07_error_model.md  08_server_api_design.md  08_validation_methodology.md  09_grafana_dashboard_spec.md  09_operational_modes.md  10_implementation_roadmap.md  11_system_architecture_diagram.md  12_professional_qoe_design.md  13_server_high_performance_design.md  14_industrial_monitoring_guide.md  15_tr101290_analysis_spec.md  16_tr101290_analysis_spec.md  17_alarm_lifecycle_spec.md  20_alarm_policy_engine_spec.md  21_engine_verification_matrix.md  31_monitoring_prd.md  32_verification_strategy.md  33_professional_qoe_design.md  34_server_high_performance_design.md  35_industrial_monitoring_guide.md  40_api_reference.md  42_forensic_verification_guide.md  43_server_api_design.md  44_grafana_dashboard_spec.md  45_tsa_server_pro_design.md  46_inference_engine_implementation.md  47_professional_metrology_roadmap.md  48_troubleshooting_and_guardrails.md  49_engine_enhancement_plan.md  (+15 more)
include/: alloc_tracker.h  mongoose.h  mpmc_queue.h  nalu_sniffer.h  spsc_queue.h  tsa.h  tsa_alert.h  tsa_archive.h  tsa_auth.h  tsa_bitstream.h  tsa_clock.h  tsa_clock_domain.h  tsa_conf.h  tsa_conf_lexer.h  tsa_descriptors.h  tsa_engine.h  tsa_es_track.h  tsa_event.h  tsa_histogram.h  tsa_hls_parser.h  tsa_internal.h  tsa_job_manager.h  tsa_load_monitor.h  tsa_log.h  tsa_lua.h  tsa_packet_pool.h  tsa_pcr_clock.h  tsa_pcr_track.h  tsa_pipeline.h  tsa_plugin.h  tsa_s3.h  tsa_simd.h  tsa_source.h  tsa_stream.h  tsa_stream_model.h  tsa_top_shm.h  tsa_units.h  tsa_webhook.h  tsp.h  version.h
monitoring/: add-target.sh  docker-compose.yml  monitoring-down.sh  monitoring-purge.sh  monitoring-up.sh  remove-target.sh
plugins/: cc_parser.lua  scte35_parser.lua
sample/: test_1m.ts
scripts/: README.md  analyze_pcap_cbr.py  appliance_boot_verify.sh  appliance_factory_reset.sh  chaos_proxy.py  deploy_clean_mock.sh  deploy_dashboard.py  discovery_limit.py  drive_release_test.py  e2e_8_streams_test.sh  env_ready.sh  extreme_stress_test.py  factory_repair.sh  gen_golden_stream.py  grant_rt_perms.sh  ironclad_verify.py  measure_tsp.py  metrics_exporter.py  mock_instrument_gen.py  monitoring_control.sh  pcr_analyzer_lite.py  professional_stress_runner.py  run_benchmark.sh  run_tstd_benchmark.sh  self_test_noc.sh  self_verify_noc.py  simulate_8_streams.sh  simulate_mdi_srt_incident.py  stability_audit.py  start_remote_monitoring.sh  stress_test_5min_final.sh  sys_tune_perf.sh  test-e2e-gateway.sh  test-e2e-srt-aes.sh  test-e2e-srt.sh  test-e2e-stop.sh  test-e2e.sh  test-metrics-polling.sh  test-pro-noc.sh  test-saas-dynamic.sh  (+51 more)
src/: alloc_tracker.c  mongoose.c  mpmc_queue.c  nalu_sniffer.c  spsc_queue.c  srt_ingest.c  srt_utils.c  srt_utils_fix.c  tsa.c  tsa.c_fix  tsa_alert.c  tsa_archive.c  tsa_audio_audit.c  tsa_auth.c  tsa_cli.c  tsa_clock.c  tsa_clock_domain.c  tsa_conf.c  tsa_conf_lexer.c  tsa_conf_watcher.c  tsa_dashboard.c  tsa_descriptors.c  tsa_engine_codec.c  tsa_engine_essence.c  tsa_engine_pcr.c  tsa_engine_scte35.c  tsa_engine_tr101290.c  tsa_es.c  tsa_event.c  tsa_event_logic.c  tsa_exporter_prom.c  tsa_gateway.c  tsa_generator.c  tsa_health.c  tsa_histogram.c  tsa_hls_ingest.c  tsa_hls_parser.c  tsa_iat_tester.c  tsa_job_manager.c  tsa_json.c  (+33 more)
src/libtsshaper/: .gitignore  CMakeLists.txt  FFMPEG_INTEGRATION_DESIGN.md  Makefile  README.md
src/libtsshaper/docs/: README.md  VERIFICATION_GUIDE.md  ffmpeg_integration.md  implementation_plan.md  testing_guide.md  tstd_pitfalls_and_tuning.md  verification.md
src/libtsshaper/include/: libtsshaper.h
src/libtsshaper/include/tsshaper/: tsshaper.h
src/libtsshaper/scripts/: build_ffmpeg_integration.sh  check_bitrate_smoothness.py  scan_pids.py  ts_clock_closure_audit.sh  ts_expert_auditor.py  ts_pcr_sliding_window.py  ts_shapability_analyzer.py  ts_telemetry_analyzer.py  tstd_audio_only_audit.sh  tstd_chaos_audit.sh  tstd_edge_cases.sh  tstd_expert_step_audit.sh  tstd_full_validation.sh  tstd_jump_audit.sh  tstd_legacy_compare_audit.sh  tstd_master_audit.sh  tstd_modular_audit.sh  tstd_parallel_audit.sh  tstd_physical_audit.sh  tstd_psi_audit.sh  tstd_regression_suite.sh  tstd_shapability_matrix.sh  tstd_srt_native_audit.sh  tstd_srt_srs_audit.sh  tstd_udp_stability.sh
src/libtsshaper/src/core/: interleaver.c  internal.h  spsc_queue.c  spsc_queue.h  statmux.c  tss_fifo.c  tss_fifo.h  tss_internal.h  tss_io.c  tss_metrics.c  tss_pacing.c  tss_scheduler.c  tss_voter.c  tsshaper.c  tstd_model.c
src/libtsshaper/src/pacer/: pacer_loop.c
src/libtsshaper/src/platform/: hal.c  hal.h  hal_callback.c  hal_linux.c  hal_mock.c
src/libtsshaper/tests/: test_bench.c  test_ffmpeg_integration.c  test_offline_export.c  test_real_file_shaping.c
tests/: test_affinity.c  test_alert_state_machine.c  test_alert_suppression.c  test_analyzer_zero_alloc.c  test_atomic_sync.c  test_auth_jwt.c  test_auth_toggle.c  test_av_sync.c  test_bitrate_comparison.c  test_bitrate_consistency.c  test_bitrate_peaks.c  test_bitstream.c  test_bitstream_pcr.c  test_capture_performance.c  test_catchup.c  test_causal_chain.c  test_cc_classifier.c  test_cc_classifier_v2.c  test_cc_repair.c  test_cc_repair_stress.c  test_chaos_injector.sh  test_clock_128.c  test_clock_domain.c  test_clock_inspector.c  test_conf.c  test_config.c  (+145 more)
(+383 files in other folders)
